footer area added

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,9 @@
 .font-mulish {
   font-family: "Mulish", sans-serif;
 }
+.bg-image {
+    background-image: url(../images/bgbanner.png);
+    /* background-size: cover; */
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
