--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
 }
 .bg-image {
     background-image: url(../images/bgbanner.png);
-    /* background-size: cover; */
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: bottom;
+    border-radius: 24px;
 }
